@@ -20,7 +20,7 @@ my %WriteMakefileArgs = (
     "Carp" => 0,
     "Exporter" => 0,
     "HTML::Entities" => 0,
-    "IO::Socket::SSL" => 0,
+    "LWP::Protocol::https" => 0,
     "Try::Tiny" => "0.24",
     "WWW::Shorten" => "3.09",
     "base" => 0,
@@ -46,7 +46,7 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "HTML::Entities" => 0,
-  "IO::Socket::SSL" => 0,
+  "LWP::Protocol::https" => 0,
   "Test::More" => "0.88",
   "Try::Tiny" => "0.24",
   "WWW::Shorten" => "3.09",
