@@ -6,7 +6,7 @@ on 'runtime' => sub {
     requires 'Carp';
     requires 'Exporter';
     requires 'HTML::Entities';
-    requires 'IO::Socket::SSL';
+    requires 'LWP::Protocol::https';
     requires 'Try::Tiny';
     requires 'WWW::Shorten' => '3.09';
 };
