@@ -13,11 +13,11 @@ exclude_filename = README.md
 
 [@Starter]
 -remove = GatherDir
-
 revision = 1
 Test::Compile.xt_mode = 1
 ReadmeAnyFromPod.source_filename = lib/WWW/Shorten/IsGd.pm
 
+[OurPkgVersion]
 
 [ReadmeAnyFromPod / Markdown_Readme]
 type = markdown
@@ -39,7 +39,6 @@ user    = p5-shorten
 [CheckChangeLog]
 [CheckChangesHasContent]
 [Test::ChangesHasContent]
-[PkgVersion]
 
 [Test::Kwalitee]
 [Test::Version]
